Fix colour contrast on breadcrumbs

--- a/app/assets/scss/_navigation.scss
+++ b/app/assets/scss/_navigation.scss
@@ -80,7 +80,7 @@
 }
 
 .global-breadcrumb {
-  background: #0098b0;
+  background: $aqua;
 
   [class^='breadcrumbs'] {
     ul {
